--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.donorsanddrives">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
     <application
-        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
+        android:fullBackupContent="false"
+        android:icon="@drawable/android_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/android_logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="">
+        android:theme="@style/AppTheme">
         <activity android:name=".deleteDocAcc" />
         <activity android:name=".editDocAcc" />
         <activity android:name=".viewDocAcc" />
         <activity android:name=".docMain" />
-        <activity android:name=".searchDocId" />
+        <activity android:name=".searchDocId" android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".docAccSuccess" />
         <activity android:name=".docUser" />
         <activity android:name=".createDocAcc" />
         <activity android:name=".doctor_acc" />
         <activity android:name=".manage_accs" />
         <activity android:name=".admin_home" />
-        <activity android:name=".MainActivity2" />
+        <activity android:name=".MainActivity2" android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
