--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,27 +5,39 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
-        android:usesCleartextTraffic="true"
         android:fullBackupContent="false"
         android:icon="@drawable/android_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/android_logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".managerAcc"></activity>
+        <activity android:name=".deleteManagerAcc" />
+        <activity android:name=".editManagerAcc" />
+        <activity android:name=".viewManagerAcc" />
+        <activity android:name=".managerMain" />
+        <activity android:name=".searchManagerId" />
+        <activity android:name=".managerAccSuccess" />
+        <activity android:name=".managerUser" />
+        <activity android:name=".createManagerAcc" />
         <activity android:name=".deleteDocAcc" />
         <activity android:name=".editDocAcc" />
         <activity android:name=".viewDocAcc" />
         <activity android:name=".docMain" />
-        <activity android:name=".searchDocId" android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".searchDocId"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".docAccSuccess" />
         <activity android:name=".docUser" />
         <activity android:name=".createDocAcc" />
         <activity android:name=".doctor_acc" />
         <activity android:name=".manage_accs" />
         <activity android:name=".admin_home" />
-        <activity android:name=".MainActivity2" android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".MainActivity2"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
