Doctor interface files with FindDonor.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,28 @@
         <activity android:name=".doctor_acc" />
         <activity android:name=".manage_accs" />
         <activity android:name=".admin_home" />
+
+        <activity android:name=".EditDonorMedDetails" />
+        <activity android:name=".ViewDonor" />
+        <activity android:name=".FindDonor" />
+        <activity android:name=".BloodStocks" />
+        <activity android:name=".DoctorMapsActivity" />
+        <activity android:name=".DoctorHome" />
+
+        <activity android:name=".Campaign" />
+        <activity android:name=".CM" />
+        <activity android:name=".Doctor" />
+        <activity android:name=".Station" />
+        <activity android:name=".SearchCamp" />
+        <activity android:name=".SearchCM" />
+        <activity android:name=".SearchDoc" />
+        <activity android:name=".SearchStation" />
+
         <activity
             android:name=".MainActivity2"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
