--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".managerAcc"></activity>
+        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".DoctorChangeUsername" />
+        <activity android:name=".DoctorChangePassword" />
+        <activity android:name=".Appointments" />
+        <activity android:name=".managerAcc" />
         <activity android:name=".deleteManagerAcc" />
         <activity android:name=".editManagerAcc" />
         <activity android:name=".viewManagerAcc" />
@@ -36,27 +40,19 @@
         <activity android:name=".manage_accs" />
         <activity android:name=".admin_home" />
 
-        <activity android:name=".EditDonorMedDetails" />
-        <activity android:name=".ViewDonor" />
-        <activity android:name=".FindDonor" />
-        <activity android:name=".BloodStocks" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCSQMiVY30Lx5k6dROjWz2cjhdAHuIdXPA" />
+
         <activity android:name=".DoctorMapsActivity" />
         <activity android:name=".DoctorHome" />
-        <activity android:name=".DonationsActivity" />
         <activity android:name=".Campaign" />
-        <activity android:name=".CM" />
-        <activity android:name=".Doctor" />
-        <activity android:name=".Station" />
-        <activity android:name=".SearchCamp" />
-        <activity android:name=".SearchCM" />
         <activity android:name=".SearchDoc" />
-        <activity android:name=".SearchStation" />
-
+        <activity android:name=".ViewProfileDoctor" />
         <activity
             android:name=".MainActivity2"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
