--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.donorsanddrives">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -13,9 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".searchUsers"></activity>
+        <activity android:name=".editCampaign" />
+        <activity android:name=".viewCampaign" />
+        <activity android:name=".searchCampaigns" />
+        <activity android:name=".editManagerProfile" />
+        <activity android:name=".managerProfile" />
+        <activity android:name=".cmanagerHome" />
         <activity android:name=".managerAcc" />
-
         <activity android:name=".deleteManagerAcc" />
         <activity android:name=".editManagerAcc" />
         <activity android:name=".viewManagerAcc" />
@@ -37,7 +44,6 @@
         <activity android:name=".doctor_acc" />
         <activity android:name=".manage_accs" />
         <activity android:name=".admin_home" />
-
         <activity android:name=".accEditSuccess" />
         <activity android:name=".viewMedicalDetails" />
         <activity android:name=".profile" />
@@ -59,15 +65,12 @@
         <activity android:name=".viewDonLead" />
         <activity android:name=".viewBloodDrives" />
         <activity android:name=".donorHome" />
-
-
         <activity android:name=".EditDonorMedDetails" />
         <activity android:name=".ViewDonor" />
         <activity android:name=".FindDonor" />
         <activity android:name=".BloodStocks" />
         <activity android:name=".DoctorMapsActivity" />
         <activity android:name=".DoctorHome" />
-
         <activity android:name=".Campaign" />
         <activity android:name=".CM" />
         <activity android:name=".Doctor" />
@@ -76,12 +79,10 @@
         <activity android:name=".SearchCM" />
         <activity android:name=".SearchDoc" />
         <activity android:name=".SearchStation" />
-
         <activity
             android:name=".MainActivity2"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
